update ResourceManagerTestBase for hiding output